# analyze-eye-tracking-data

./: .gitignore  README.md  pyproject.toml
data/4048f8a4-ecc9-4d5f-ad6d-52a16f897897/: 4048f8a4-ecc9-4d5f-ad6d-52a16f897897_plr_protocol.csv
data/4587e090-ddec-4e63-bf94-7eb1ad45426e/: 4587e090-ddec-4e63-bf94-7eb1ad45426e_plr_protocol.csv
data/46a384b0-3274-45f3-ab1c-1d55b70a1eb6/: 46a384b0-3274-45f3-ab1c-1d55b70a1eb6_plr_protocol.csv
docs/: ideas.md
notebooks/: create_animation_all_tests.ipynb  run.ipynb
