[project]
name = "analyze-eye-tracking-data"
version = "0.1.0"
description = ""
authors = [
    {name = "TLRN",email = "lrn.tl.dv@gmail.com"}
]
package-mode = false

readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib (>=3.10.1,<4.0.0)",
    "markitdown[pdf] (>=0.1.1,<0.2.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "shapely (>=2.1.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
